small changes to some apis for better work